PN-16735 feat: Add initRework API
