# src/main/java/it/pagopa/pn/papertracker/middleware/dao/dynamo/entity/PaperTrackings.java
@@ -30,6 +30,8 @@ public class PaperTrackings {
     public static final String COL_TTL = "ttl";
     public static final String OCR_REQUEST_ID_INDEX = "ocrRequestId-index";
     public static final String ATTEMPT_ID_PCRETRY_INDEX = "attemptId-pcRetry-index";
+    public static final String COL_REWORK_REQUEST_TIMESTAMP = "reworkRequestTimestamp";
+    public static final String COL_REWORK_ID = "reworkId";
 
     @Getter(onMethod = @__({@DynamoDbPartitionKey, @DynamoDbAttribute(COL_TRACKING_ID)}))
     private String trackingId;
@@ -72,6 +74,12 @@ public class PaperTrackings {
 
     @Getter(onMethod = @__({@DynamoDbAttribute(COL_TTL)}))
     private Long ttl;
+
+    @Getter(onMethod = @__({@DynamoDbAttribute(COL_REWORK_REQUEST_TIMESTAMP)}))
+    private Instant reworkRequestTimestamp;
+
+    @Getter(onMethod = @__({@DynamoDbAttribute(COL_REWORK_ID)}))
+    private String reworkId;
 
     // Costruito UNA volta sola
     private static final TableSchema<PaperTrackings> SCHEMA =
